Homepage: explicitly define card backgrounds
Previously, these were being inherited effectively at random. Fixes unwanted transparency on the testimonials section.

--- a/src/components/HomepageFeatures/TeamGallery/TeamGallery.css
+++ b/src/components/HomepageFeatures/TeamGallery/TeamGallery.css
@@ -35,7 +35,7 @@
    PROFILE CARD
 ================================= */
 .profile-card {
-  /* background: var(--ifm-card-background-color); */
+  background-color: var(--bg-card);
   border-radius: 22px;
   padding: 2.5rem 1.5rem 3rem;
   text-align: center;
